# hifi

./: BUILD.md  CMakeLists.txt
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.cpp  (+8 more)
cmake/: compiler.cmake
debian/: README.Debian  README.source  changelog  control  copyright  rules
examples/: attachedEntitiesManager.js  dice.js  edit.js  grab.js
interface/: CMakeLists.txt
libraries/entities/: CMakeLists.txt
libraries/entities/src/: AddEntityOperator.cpp  AddEntityOperator.h  BoundingBoxRelatedProperties.cpp  BoundingBoxRelatedProperties.h  BoxEntityItem.cpp  BoxEntityItem.h  DeleteEntityOperator.cpp  DeleteEntityOperator.h  EntityActionFactoryInterface.h  EntityActionInterface.h  EntityDynamicInterface.cpp  EntityDynamicInterface.h  EntityEditFilters.cpp  EntityEditPacketSender.cpp  EntityEditPacketSender.h  EntityItem.cpp  EntityItem.h  EntityItemProperties.cpp  EntityItemProperties.h  EntityItemPropertiesDefaults.h  EntityItemPropertiesMacros.h  EntityPropertyFlags.cpp  EntityPropertyFlags.h  EntityScriptingInterface.cpp  EntityScriptingInterface.h  EntitySimulation.cpp  EntitySimulation.h  EntityTree.cpp  EntityTree.h  EntityTreeElement.cpp  EntityTreeElement.h  EntityTreeHeadlessViewer.cpp  EntityTreeHeadlessViewer.h  EntityTypes.cpp  EntityTypes.h  GrabPropertyGroup.cpp  GrabPropertyGroup.h  KeyLightPropertyGroup.cpp  KeyLightPropertyGroup.h  LeoPolyEntityItem.cpp  (+44 more)
libraries/entities/src/dynamics/: EntityConstraint.h  EntityDynamic.cpp  EntityDynamic.h  EntityDynamicFactoryInterface.h  EntityDynamicInterface.cpp  EntityDynamicInterface.h
scripts/: defaultScripts.js
tools/: CMakeLists.txt
tools/vrca-unpacker/: CMakeLists.txt
tools/vrca-unpacker/src/: VRCAUnpackerApp.cpp  VRCAUnpackerApp.h  main.cpp
tools/webrtc-server-test/: CMakeLists.txt
tools/webrtc-server-test/src/: WebRTCServerTestApp.cpp  WebRTCServerTestApp.h  main.cpp  webrtc.js
(+520 files in other folders)
